# soundfont-compiler

./: Cargo.toml  readme.md  test_output.sf2
example_project/: SoundFont.toml
example_project/instruments/: Guitar.toml
example_project/presets/: Guitar.toml
src/: args.rs  main.rs
src/compiler/: error.rs  mod.rs  preprocess_formats.rs
src/soundfont/: error.rs  info.rs  mod.rs  sdta.rs
src/soundfont/info/: mod.rs  version_tag.rs
src/soundfont/pdta/: ibag.rs  igen.rs  imod.rs  inst.rs  mod.rs  pbag.rs  pgen.rs  phdr.rs  pmod.rs  shdr.rs
src/soundfont/sdta/: mod.rs
