[package]
name = "soundfont-compiler"
version = "0.1.0"
authors = ["sevonj"]
edition = "2021"
repository = "https://github.com/sevonj/soundfont-compiler"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
riff = "2.0.0"
rustysynth = "1.3.4"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
wavers = "1.5.1"
